@@ -1,6 +1,7 @@
 version 0.9.0 - XX-MMM-2009
  . All: using CC namespace (issue #520)
  . All: prevents warnings with Static Analizer (issue #613)
+ . BitmapFontAtlas: works with subdirectories (issue #612)
 
 version 0.8.2 - 19-Oct-2009
  . Actions: Animate copy restoreOriginalFrame parameter (issue #602)
